--- a/style.css
+++ b/style.css
@@ -8,3 +8,14 @@
 body{
     background-color: #111111;
 }
+.wrapper{
+    width: 70vmin;
+    padding: 50px 40px;
+    background:  linear-gradient(360deg,white,grey);
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 5px;
+    box-shadow: 0 12px 35px #ffffff;
+}
