--- a/style.css
+++ b/style.css
@@ -19,3 +19,9 @@ body{
     border-radius: 5px;
     box-shadow: 0 12px 35px #ffffff;
 }
+span{
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-size: 100px;
+}
