--- a/style.css
+++ b/style.css
@@ -40,3 +40,17 @@ p{
     opacity: 1;
     transition: opacity 1.5s;
 }
+button{
+    display: block;
+    background-color: #000;
+    border: none;
+    padding: 5px;
+    font-size: 18px;
+    font-family: "Inter";
+    color: #fff;
+    font-weight: 600;
+    cursor: pointer;
+    padding: 12px 25px;
+    margin: 0 auto;
+    border-radius: 10px;
+}
