--- a/style.css
+++ b/style.css
@@ -26,10 +26,10 @@ h1{
     margin-bottom: 10%;
 }
 p{
-    font-size: 16px;
+    font-size: 25px;
     color: #000;
-    font-family: "Inter";
-    font-weight: 400;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 700;
     text-align: center;
     word-wrap: break-word;
     line-height: 35px;
@@ -46,7 +46,7 @@ button{
     border: none;
     padding: 5px;
     font-size: 18px;
-    font-family: "Inter";
+    font-family: 'Times New Roman', Times, serif;
     color: #fff;
     font-weight: 600;
     cursor: pointer;
